Fixed invisible Team on homepage

--- a/sites/all/themes/newmedialab/css/newmedialab.custom.css
+++ b/sites/all/themes/newmedialab/css/newmedialab.custom.css
@@ -457,10 +457,6 @@ li.leaf{
         opacity: 1;
     }
 
-.content-menu__item.last{
-    display: none;
-}
-
 #first-time{
     display: none;
 }
